--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --port 8090",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
     "axios": "^0.17.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "vue": "^2.5.11",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-resource": "^1.3.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
